# ShapeDetection

./: README.md
Code/: .gitignore  CCalibration.cpp  CCalibration.h  CColour.cpp  CColour.h  CCommandMode.cpp  CCommandMode.h  CFeatureDetection.cpp  CFeatureDetection.h  CFeatureExtraction.cpp  CFeatureExtraction.h  CInteractiveMode.cpp  CInteractiveMode.h  CMakeLists.txt  CMode.cpp  CMode.h  CParser.cpp  CParser.h  CShape.cpp  CShape.h  CTrackBar.cpp  CTrackBar.h  CViewWindow.cpp  CViewWindow.h  ESelections.h  IShape.cpp  IShape.h  input.txt  main.cpp
Code/Shapes/: CCircle.cpp  CCircle.h  CHalfCircle.cpp  CHalfCircle.h  CSquare.cpp  CSquare.h  CTriangle.cpp  CTriangle.h
Doc/UML/: Class_Diagram.uxf  Domain_Model.uxf  code standaard
